04_results/Summary/envoy_proof_mtls1.2-gcm_20260718_161506.yaml
apiVersion: v1
items:
- apiVersion: networking.istio.io/v1alpha3
  kind: EnvoyFilter
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.istio.io/v1alpha3","kind":"EnvoyFilter","metadata":{"annotations":{},"name":"force-downgrade-httpbin-server","namespace":"default"},"spec":{"configPatches":[{"applyTo":"FILTER_CHAIN","match":{"context":"SIDECAR_INBOUND","listener":{"filterChain":{"destinationPort":8080,"transportProtocol":"tls"}}},"patch":{"operation":"MERGE","value":{"transport_socket":{"name":"envoy.transport_sockets.tls","typed_config":{"@type":"type.googleapis.com/envoy.extensions.transport_ [...]
    creationTimestamp: "2026-07-18T14:33:22Z"
    generation: 1
    name: force-downgrade-httpbin-server
    namespace: default
    resourceVersion: "2092"
    uid: 4c8d44bf-8c15-4a0d-9de7-cd5e33078e5b
  spec:
    configPatches:
    - applyTo: FILTER_CHAIN
      match:
        context: SIDECAR_INBOUND
        listener:
          filterChain:
            destinationPort: 8080
            transportProtocol: tls
      patch:
        operation: MERGE
        value:
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                tls_params:
                  cipher_suites:
                  - ECDHE-ECDSA-AES128-GCM-SHA256
                  - ECDHE-RSA-AES128-GCM-SHA256
                  - ECDHE-ECDSA-AES256-GCM-SHA384
                  - ECDHE-RSA-AES256-GCM-SHA384
                  tls_maximum_protocol_version: TLSv1_2
                  tls_minimum_protocol_version: TLSv1_2
    workloadSelector:
      labels:
        app: httpbin
kind: List
metadata:
  resourceVersion: ""
